syntax = "proto3";
package echo.v1;
option go_package = "grpc-svc/api/proto;proto";

service EchoService {
  rpc Say(SayRequest) returns (SayResponse);                // unary
  rpc StreamCount(CountRequest) returns (stream CountTick); // server streaming
}

message SayRequest { string msg = 1; }
message SayResponse { string msg = 1; }

message CountRequest { int32 from = 1; int32 to = 2; }
message CountTick { int32 value = 1; }
